# bevy-terrain

./: Cargo.toml
assets/models/: island.gltf  plane.gltf  robot.gltf  stone.gltf
assets/shaders/: terrain.frag  terrain.vert
src/: fly_camera.rs  main.rs
src/terrain/: mod.rs
