[package]
name = "game"
version = "0.1.0"
authors = ["Max Byshnev <m.byshnev@gpsolutions.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
zerocopy = "0.3"
bzip2 = "0.4.1"

[dependencies.bevy]
version = "0.4.0"
features = ["dynamic"]